@@ -1,6 +1,13 @@
 # BA
 Bachelorarbeit "Erweiterte Sichtbarkeit für einfache Polygone"
 
+To compile:
+javafx.version=11.0.2
+javafx.runtime.version=11.0.2+1
+
+Add lib to libraries and run extra compile command:
+--module-path="add Path to lib folder here"--add-modules javafx.controls,javafx.fxml
+
 # To Do List:
 - Algorithm
 - Editor, example polygons, save or load, pre generate
